<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.nitratine.priceperunit.SettingsActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.13"
                        app:tint="@android:color/white"
                        app:srcCompat="@drawable/currency" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.57"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:text="@string/currency_symbol"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/currencyValueTextEdit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0.3"
                        android:ems="10"
                        android:hint="Value"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        android:text="$"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.13"
                        app:tint="@android:color/white"
                        app:srcCompat="@drawable/rounding" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.57"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:text="@string/rounding"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/roundingValueSpinner"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0.3"
                        android:backgroundTint="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.13"
                        app:tint="@android:color/white"
                        app:srcCompat="@drawable/results" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.57"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:text="@string/show_results_tile"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <Switch
                        android:id="@+id/showResultsValueSwitch"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0.3"
                        android:checked="true"
                        android:paddingRight="30dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.13"
                        app:tint="@android:color/white"
                        app:srcCompat="@drawable/data" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.57"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:text="@string/remember_data"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <Switch
                        android:id="@+id/rememberDataValueSwitch"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0.3"
                        android:checked="true"
                        android:paddingRight="30dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.13"
                        app:srcCompat="@drawable/version_white" />

                    <TextView
                        android:id="@+id/versionTag"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.87"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:text="@string/version"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleColor="#FFFFFF">

                    <LinearLayout
                        android:id="@+id/rateLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.13"
                            app:srcCompat="@drawable/star_white" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.87"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:text="@string/rate_this_app"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleColor="#FFFFFF">

                    <LinearLayout
                        android:id="@+id/bugReportLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.13"
                            app:srcCompat="@drawable/bug_white" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.87"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:text="@string/bug_reporting"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="4dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleColor="#FFFFFF">

                    <LinearLayout
                        android:id="@+id/developerSiteLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.13"
                            app:srcCompat="@drawable/developer_white" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.87"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:text="@string/developers_site"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleColor="#FFFFFF">

                    <LinearLayout
                        android:id="@+id/licensesLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.13"
                            app:srcCompat="@drawable/license_white" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.87"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:text="@string/licenses"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
